update: openapi basic settings
